Changed API to get, delete and put by id instead of name, this fixes as bug where, if you try to chang the name of a permission, you can't because it treats that as an new permission, I don't remember why I thought it was a good idea to make this id in the first place.
